@@ -1,7 +1,0 @@
-# This module has moved to zope.component.interface
-# and will go away in Zope 3.5
-import zope.deprecation
-zope.deprecation.moved(
-    'zope.component.interface',
-    "Zope 3.5",
-    )
